# terminal_agent

./: LICENSE  Makefile  README.md  env.example  pyproject.toml
scripts/: bash_install_snippet.sh  zsh_install_snippet.sh
src/ai_shell/: __init__.py  audit.py  cli.py  config.py  context.py  safety.py  server.py
src/ai_shell/provider/: __init__.py  base.py  ollama_provider.py  openai_provider.py
tests/: __init__.py  test_provider_select.py  test_safety.py  test_server.py
